--- a/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
@@ -5015,27 +5015,16 @@ class MinStack:
 ##### solution
 
 ```python
-#
-# @lc app=leetcode.cn id=105 lang=python3
-#
-# [105] 从前序与中序遍历序列构造二叉树
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
     def buildTree(self, preorder: List[int], inorder: List[int]) -> TreeNode:
-        if not preorder or not inorder:
+        if not preorder:
             return None
         root = TreeNode(preorder[0])
-        mid = inorder.index(preorder[0])
-        left = inorder[:mid]
-        right = inorder[mid+1:]
-        root.left = self.buildTree(preorder[1:1+len(left)], left)
-        root.right = self.buildTree(preorder[-len(right):], right)
+        idx = inorder.index(preorder[0])
+        left_tree = inorder[:idx]
+        right_tree = inorder[idx+1:]
+        root.left = self.buildTree(preorder[1: 1 + len(left_tree)], left_tree)
+        root.right = self.buildTree(preorder[1 + len(left_tree):], right_tree)
         return root
 ```
 
@@ -5094,35 +5083,56 @@ class Solution:
 **标签**
 `树` `深度优先搜索` `广度优先搜索` `二叉树` 
 
-
-##### solution
+##### solution1 dfs标准写法，等价于递归
 
 ```python
-#
-# @lc app=leetcode.cn id=112 lang=python3
-#
-# [112] 路径总和
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
-    def hasPathSum(self, root: TreeNode, sum: int) -> bool:
+    def hasPathSum(self, root: Optional[TreeNode], targetSum: int) -> bool:
+        def dfs(sum_, node):
+            if not node.left and not node.right and sum_ + node.val == targetSum:
+                return True
+            
+            if node.left and dfs(sum_ + node.val, node.left):
+                return True
+            if node.right and dfs(sum_ + node.val, node.right):
+                return True
+            return False
+            
+        
         if not root:
             return False
+        return dfs(0, root)
+```
+
+##### solution2 递归
+
+```python
+class Solution:
+    def hasPathSum(self, root: Optional[TreeNode], targetSum: int) -> bool:
+        if not root:
+            return False
+        if not root.left and not root.right and root.val == targetSum:
+            return True
+        return self.hasPathSum(root.left, targetSum-root.val) or self.hasPathSum(root.right, targetSum-root.val)
+```
+
+##### solution3 迭代——使用stack
+
+```python
+class Solution:
+    def hasPathSum(self, root: Optional[TreeNode], targetSum: int) -> bool:
+        if not root:
+            return False
+
         stack = [(root, 0)]
         while stack:
-            node, v = stack.pop()
-            if not node.left and not node.right:
-                if v + node.val == sum:
-                    return True
+            node, val = stack.pop()
+            if not node.left and not node.right and val + node.val == targetSum:
+                return True
             if node.left:
-                stack.append((node.left, v+node.val))
+                stack.append((node.left, val + node.val))
             if node.right:
-                stack.append((node.right, v+node.val))
+                stack.append((node.right, val + node.val))
         return False
 ```
 
@@ -5179,31 +5189,22 @@ class Solution:
 ##### solution
 
 ```python
-#
-# @lc app=leetcode.cn id=113 lang=python3
-#
-# [113] 路径总和 II
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
-    def pathSum(self, root: TreeNode, sum: int) -> List[List[int]]:
+    def pathSum(self, root: Optional[TreeNode], targetSum: int) -> List[List[int]]:
+        def dfs(path, sum_, node):
+            if not node.left and not node.right and sum_ + node.val == targetSum:
+                res.append([node.val for node in path + [node]])
+                return
+            
+            if node.left:
+                dfs(path + [node], sum_ + node.val, node.left)
+            if node.right:
+                dfs(path + [node], sum_ + node.val, node.right)
+            
         if not root:
             return []
         res = []
-        def dfs(node, v, path):
-            if not node:
-                return
-            if not node.left and not node.right and v + node.val == sum:
-                res.append(path+[node.val])
-                return
-            dfs(node.left, v+node.val, path+[node.val])
-            dfs(node.right, v+node.val, path+[node.val])
-        dfs(root, 0, [])
+        dfs([], 0, root)
         return res
 ```
 
@@ -5261,35 +5262,71 @@ class Solution:
 **标签**
 `树` `深度优先搜索` `二叉树` 
 
-
-##### solution
+##### solution1 dfs标准写法，等价于递归
 
 ```python
-#
-# @lc app=leetcode.cn id=129 lang=python3
-#
-# [129] 求根到叶子节点数字之和
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
+class Solution:
+    def sumNumbers(self, root: TreeNode) -> int:
+        def dfs(path, node):
+            nonlocal res
+            if not node.left and not node.right:
+                res += int("".join([str(node.val) for node in path + [node]]))
+                return
+            
+            if node.left:
+                dfs(path + [node], node.left)
+            if node.right:
+                dfs(path + [node], node.right)
+            
+        if not root:
+            return 0
+        res = 0
+        dfs([], root)
+        return res
+```
+
+##### solution2 递归
+
+-   与112.路径总和不同的是，本体的sumNumbers函数只有一个TreeNode变量，但是递归过程中还需要一个变量记录从根节点到当前节点的值组成的整数
+
+```python
+class Solution:
+    def sumNumbers(self, root: TreeNode) -> int:
+        def helper(node, path_val):
+            nonlocal res
+            if not node.left and not node.right:
+                res += 10 * path_val + node.val
+                return
+            if node.left:
+                helper(node.left, 10 * path_val + node.val)
+            if node.right:
+                helper(node.right, 10 * path_val + node.val)
+
+        if not root:
+            return 0
+        res = 0
+        helper(root, 0)
+        return res
+```
+
+##### solution3 迭代
+
+```python
 class Solution:
     def sumNumbers(self, root: TreeNode) -> int:
         if not root:
             return 0
-        res = 0
+        
         stack = [(root, 0)]
+        res = 0
         while stack:
-            node, v = stack.pop()
+            node, val = stack.pop()
             if not node.left and not node.right:
-                res += 10*v + node.val
+                res += 10 * val + node.val
             if node.left:
-                stack.append((node.left, 10*v+node.val))
+                stack.append((node.left, 10 * val + node.val))
             if node.right:
-                stack.append((node.right, 10*v+node.val))
+                stack.append((node.right, 10 * val + node.val))
         return res
 ```
 
@@ -5361,47 +5398,43 @@ class Solution:
 **标签**
 `栈` `树` `深度优先搜索` `二叉树` 
 
-
-##### solution
+##### solution1 递归
 
 ```python
-#
-# @lc app=leetcode.cn id=144 lang=python3
-#
-# [144] 二叉树的前序遍历
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
-    # 非递归 46.14%
-    # def preorderTraversal(self, root: TreeNode) -> List[int]:
-    #     if not root:
-    #         return []
-    #     res = []
-    #     stack = [root]
-    #     while stack:
-    #         node = stack.pop()
-    #         res.append(node.val)
-    #         if node.right:
-    #             stack.append(node.right)
-    #         if node.left:
-    #             stack.append(node.left)
-    #     return res
-    # 递归 80.44%
-    def preorderTraversal(self, root: TreeNode) -> List[int]:
+    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        def helper(root):
+            nonlocal res
+            res.append(root.val)
+            if root.left:
+                helper(root.left)
+            if root.right:
+                helper(root.right)
+        
         if not root:
             return []
-        res = [root.val]
-        left = self.preorderTraversal(root.left)
-        right = self.preorderTraversal(root.right)
-        if left:
-            res += left
-        if right:
-            res += right
+        res = []
+        helper(root)
+        return res
+```
+
+##### solution2 迭代
+
+```python
+class Solution:
+    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        if not root:
+            return []
+        
+        res = []
+        stack = [root]
+        while stack:
+            node = stack.pop()
+            res.append(node.val)
+            if node.right:
+                stack.append(node.right)
+            if node.left:
+                stack.append(node.left)
         return res
 ```
 
@@ -5444,35 +5477,40 @@ class Solution:
 **标签**
 `树` `深度优先搜索` `字符串` `回溯` `二叉树` 
 
-
-##### solution
+##### solution1 dfs标准写法，等价于递归
 
 ```python
-#
-# @lc app=leetcode.cn id=257 lang=python3
-#
-# [257] 二叉树的所有路径
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
-    def binaryTreePaths(self, root: TreeNode) -> List[str]:
-        res = []
-        if not root:
-            return res
-        stack = [(root, [])]
-        while stack:
-            node, path = stack.pop()
+    def binaryTreePaths(self, root: Optional[TreeNode]) -> List[str]:
+        def dfs(path, node):
             if not node.left and not node.right:
-                res.append('->'.join(path+[str(node.val)]))
-            if node.right:
-                stack.append((node.right, path+[str(node.val)]))
+                res.append("->".join([str(i) for i in path + [node.val]]))
+                return
             if node.left:
-                stack.append((node.left, path+[str(node.val)]))
+                dfs(path + [node.val], node.left)
+            if node.right:
+                dfs(path + [node.val], node.right)
+        
+        res = []
+        dfs([], root)
+        return res
+```
+
+##### Solution2 迭代
+
+```python
+class Solution:
+    def binaryTreePaths(self, root: Optional[TreeNode]) -> List[str]:
+        stack = [(root, "")]
+        res = []
+        while stack:
+            node, s = stack.pop()
+            if not node.left and not node.right:
+                res.append(s + str(node.val))
+            if node.left:
+                stack.append((node.left, s + str(node.val) + "->" ))
+            if node.right:
+                stack.append((node.right, s + str(node.val) + "->"))
         return res
 ```
 
@@ -5521,37 +5559,63 @@ class Solution:
 **标签**
 `树` `深度优先搜索` `二叉树` 
 
+##### solution1 递归
 
-##### solution
+-   从root为根节点的子树中，找一条向下的和为targetSum的路径，等价于两个问题解集的并集
+    -   找一条root为初始节点的且向下的和为targetSum的路径
+    -   分别从root.left和root.right为根节点的子树中，找一条向下的和为targetSum的路径
 
 ```python
-#
-# @lc app=leetcode.cn id=437 lang=python3
-#
-# [437] 路径总和 III
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
-    def pathSum(self, root: TreeNode, sum: int) -> int:
+    def pathSum(self, root: TreeNode, targetSum: int) -> int:
+        # dfs函数计算以node节点为初始节点，向下出发，找到和为sum_的路径
+        
+        def dfs(node, sum_):
+            if not node:
+                return 0
+            res = 0
+            if node.val == sum_:
+                res += 1
+            res += dfs(node.left, sum_ - node.val)
+            res += dfs(node.right, sum_ - node.val)
+            return res
+
         if not root:
             return 0
-        self.count = 0
-        d = {0 : 1}
-        def dfs(node, pathsum, d):
-            if node:
-                pathsum += node.val
-                self.count += d.get(pathsum-sum, 0)
-                d[pathsum] = d.get(pathsum, 0) + 1
-                dfs(node.left, pathsum, d)
-                dfs(node.right, pathsum, d)
-                d[pathsum] -= 1
-        dfs(root, 0, d)
-        return self.count
+        
+        res = dfs(root, targetSum)
+        res += self.pathSum(root.left, targetSum)
+        res += self.pathSum(root.right, targetSum)
+        return res
+```
+
+
+
+##### solution2 前缀和
+
+-   A，B两个node，前缀和分别为sum-target和sum，则路径A->B为目标路径
+
+```python
+class Solution:
+    def pathSum(self, root: TreeNode, targetSum: int) -> int:
+        def dfs(node, pre_sum):
+            nonlocal res
+            if not node:
+                return
+            
+            pre_sum += node.val
+            res += pathSum2cnt.get(pre_sum - targetSum, 0)
+            pathSum2cnt[pre_sum] = pathSum2cnt.get(pre_sum, 0) + 1
+            dfs(node.left, pre_sum)
+            dfs(node.right, pre_sum)
+            pathSum2cnt[pre_sum] -= 1
+        
+        if not root:
+            return 0
+        res = 0
+        pathSum2cnt = {0: 1}
+        dfs(root, 0)
+        return res
 ```
 
 >
@@ -5602,25 +5666,16 @@ class Solution:
 ##### solution
 
 ```python
-#
-# @lc app=leetcode.cn id=617 lang=python3
-#
-# [617] 合并二叉树
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
-    def mergeTrees(self, t1: TreeNode, t2: TreeNode) -> TreeNode:
-        if t1 and t2:
-            t1.val += t2.val
-            t1.left = self.mergeTrees(t1.left, t2.left)
-            t1.right = self.mergeTrees(t1.right, t2.right)
-            return t1
-        return t1 if not t2 else t2
+    def mergeTrees(self, root1: TreeNode, root2: TreeNode) -> TreeNode:
+        if not root2:
+            return root1
+        if not root1:
+            return root2
+        root1.val += root2.val
+        root1.left = self.mergeTrees(root1.left, root2.left)
+        root1.right = self.mergeTrees(root1.right, root2.right)
+        return root1
 ```
 
 >
@@ -5693,51 +5748,43 @@ class Solution:
 **标签**
 `栈` `树` `深度优先搜索` `二叉树` 
 
-
-##### solution
+##### solution1 递归
 
 ```python
-#
-# @lc app=leetcode.cn id=94 lang=python3
-#
-# [94] 二叉树的中序遍历
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
-    # 非递归 89.23 %
-    def inorderTraversal(self, root: TreeNode) -> List[int]:
-        res = []
-        if not root:
+    def inorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        def helper(root):
+            if not root:
+                return []
+            res = []
+            res += helper(root.left)
+            res.append(root.val)
+            res += helper(root.right)
             return res
+        
+        res = helper(root)
+        return res
+```
+
+##### solution2 迭代
+
+```python
+class Solution:
+    def inorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        if not root:
+            return []
         stack = []
         p = root
+        res = []
         while p or stack:
             if p:
                 stack.append(p)
                 p = p.left
             else:
-                popItem = stack.pop()
-                res.append(popItem.val)
-                p = popItem.right
+                p = stack.pop()
+                res.append(p.val)
+                p = p.right
         return res
-    # # 递归 89.23 %
-    # def inorderTraversal(self, root: TreeNode) -> List[int]:
-    #     if not root:
-    #         return []
-    #     res = []
-    #     left = self.inorderTraversal(root.left)
-    #     if left:
-    #         res += left
-    #     res += [root.val]
-    #     right = self.inorderTraversal(root.right)
-    #     if right:
-    #         res += right
-    #     return res
 ```
 
 >
@@ -5789,44 +5836,22 @@ class Solution:
 ##### solution
 
 ```python
-#
-# @lc app=leetcode.cn id=530 lang=python3
-#
-# [530] 二叉搜索树的最小绝对差
-#
-# Definition for a binary tree node.
-class TreeNode:
-    def __init__(self, x):
-        self.val = x
-        self.left = None
-        self.right = None
 class Solution:
     def getMinimumDifference(self, root: TreeNode) -> int:
-        ans = float('inf')
-        lastval = None
+        res = float('inf')
         stack = []
-        node = root
-        while stack or node:
-            if node:
-                stack.append(node)
-                node = node.left
+        pre, cur = None, root
+        while cur or stack:
+            if cur:
+                stack.append(cur)
+                cur = cur.left
             else:
-                node = stack.pop()
-                if lastval is not None:
-                    ans = min(ans, abs(lastval - node.val))
-                lastval = node.val
-                node = node.right
-        return ans
-# a = TreeNode(0)
-# b = TreeNode(2236)
-# c = TreeNode(1277)
-# d = TreeNode(2776)
-# e = TreeNode(519)
-# a.right = b
-# b.left = c
-# b.right = d
-# c.left = e
-# print(Solution().getMinimumDifference(a))
+                cur = stack.pop()
+                if pre and res > abs(pre.val - cur.val):
+                    res = abs(pre.val - cur.val)
+                pre = cur
+                cur = cur.right
+        return res
 ```
 
 >
@@ -6220,40 +6245,51 @@ class Solution:
 **标签**
 `树` `广度优先搜索` `二叉树` 
 
-
-##### solution
+##### solution1 使用deque
 
 ```python
-#
-# @lc app=leetcode.cn id=102 lang=python3
-#
-# [102] 二叉树的层次遍历
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
     def levelOrder(self, root: TreeNode) -> List[List[int]]:
         if not root:
             return []
-        curLayerNodes = [root]
-        res = [[root.val]]
-        while curLayerNodes:
-            nextLayerNodes = []
-            nextLayerValues = []
-            for node in curLayerNodes:
+        queue = collections.deque([root])
+        res = []
+        while queue:
+            cur_size = len(queue)
+            cur = []
+            for _ in range(cur_size):
+                node = queue.popleft()
+                cur.append(node.val)
                 if node.left:
-                    nextLayerNodes.append(node.left)
-                    nextLayerValues.append(node.left.val)
+                    queue.append(node.left)
                 if node.right:
-                    nextLayerNodes.append(node.right)
-                    nextLayerValues.append(node.right.val)
-            if nextLayerValues:
-                res.append(nextLayerValues)
-            curLayerNodes = nextLayerNodes
+                    queue.append(node.right)
+            res.append(cur)
+        return res
+```
+
+
+
+##### solution2 使用list
+
+```python
+class Solution:
+    def levelOrder(self, root: TreeNode) -> List[List[int]]:
+        if not root:
+            return []
+        queue = [root]
+        res = []
+        while queue:
+            next_queue = []
+            cur = []
+            for node in queue:
+                cur.append(node.val)
+                if node.left:
+                    next_queue.append(node.left)
+                if node.right:
+                    next_queue.append(node.right)
+            res.append(cur)
+            queue = next_queue
         return res
 ```
 
@@ -6307,38 +6343,26 @@ class Solution:
 ##### solution
 
 ```python
-#
-# @lc app=leetcode.cn id=103 lang=python3
-#
-# [103] 二叉树的锯齿形层次遍历
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
     def zigzagLevelOrder(self, root: TreeNode) -> List[List[int]]:
         if not root:
             return []
-        curLayerNodes = [root]
-        res = [[root.val]]
-        isEven = False
-        while curLayerNodes:
-            nextLayerNodes = []
-            nextLayerValues = []
-            isEven = not isEven
-            for node in curLayerNodes:
+        res = []
+        queue = collections.deque([root])
+        is_reverse = False
+        while queue:
+            cur_size = len(queue)
+            cur = []
+            for _ in range(cur_size):
+                node = queue.popleft()
+                cur.append(node.val)
                 if node.left:
-                    nextLayerNodes.append(node.left)
-                    nextLayerValues.append(node.left.val)
+                    queue.append(node.left)
                 if node.right:
-                    nextLayerNodes.append(node.right)
-                    nextLayerValues.append(node.right.val)
-            if nextLayerValues:
-                res.append(nextLayerValues[::-1]) if isEven else res.append(nextLayerValues)
-            curLayerNodes = nextLayerNodes
+                    queue.append(node.right)
+            cur = cur if not is_reverse else cur[::-1]
+            is_reverse = not is_reverse
+            res.append(cur)
         return res
 ```
 
@@ -6610,7 +6634,65 @@ class Solution:
 
 >
 
-## 
+#### 637.二叉树的层平均值
+
+##### 原题
+
+给定一个非空二叉树的根节点`root` , 以数组的形式返回每一层节点的平均值。与实际答案相差 `10^-5` 以内的答案可以被接受。
+
+ **示例 1：** 
+
+<img alt="" src="https://tva1.sinaimg.cn/large/e6c9d24egy1h0gihkf4j8j207p08e3yh.jpg" />
+
+```
+输入：root = [3,9,20,null,null,15,7]
+输出：[3.00000,14.50000,11.00000]
+解释：第 0 层的平均值为 3,第 1 层的平均值为 14.5,第 2 层的平均值为 11 。
+因此返回 [3, 14.5, 11] 。
+
+```
+
+ **示例 2:** 
+
+<img alt="" src="https://tva1.sinaimg.cn/large/e6c9d24egy1h0gihj0fh6j208408eaa1.jpg" />
+
+```
+输入：root = [3,9,20,15,7]
+输出：[3.00000,14.50000,11.00000]
+
+```
+
+
+ **提示：** 
+
+- 树中节点数量在 `[1, 10^4]` 范围内
+- `-2^31 <= Node.val <= 2^31 - 1` 
+
+**标签**
+`树` `深度优先搜索` `广度优先搜索` `二叉树` 
+
+##### solution
+
+```python
+class Solution:
+    def averageOfLevels(self, root: Optional[TreeNode]) -> List[float]:
+        res = []
+        queue = [root]
+        while queue:
+            cur_sum = 0
+            next_queue = []
+            for node in queue:
+                cur_sum += node.val
+                if node.left:
+                    next_queue.append(node.left)
+                if node.right:
+                    next_queue.append(node.right)
+            res.append(cur_sum / len(queue))
+            queue = next_queue
+        return res
+```
+
+
 
 ### 二叉搜索树
 
