--- a/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
@@ -6416,36 +6416,23 @@ class Solution:
 ##### solution
 
 ```python
-#
-# @lc app=leetcode.cn id=107 lang=python3
-#
-# [107] 二叉树的层次遍历 II
-#
-# Definition for a binary tree node.
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
 class Solution:
     def levelOrderBottom(self, root: TreeNode) -> List[List[int]]:
         if not root:
             return []
-        curLayerNodes = [root]
-        res = [[root.val]]
-        while curLayerNodes:
-            nextLayerNodes = []
-            nextLayerValues = []
-            for node in curLayerNodes:
+        queue = collections.deque([root])
+        res = []
+        while queue:
+            cur_size = len(queue)
+            cur = []
+            for _ in range(cur_size):
+                node = queue.popleft()
+                cur.append(node.val)
                 if node.left:
-                    nextLayerNodes.append(node.left)
-                    nextLayerValues.append(node.left.val)
+                    queue.append(node.left)
                 if node.right:
-                    nextLayerNodes.append(node.right)
-                    nextLayerValues.append(node.right.val)
-            if nextLayerValues:
-                res.append(nextLayerValues)
-            curLayerNodes = nextLayerNodes
+                    queue.append(node.right)
+            res.append(cur)
         return res[::-1]
 ```
 
