--- a/_posts/2022-02-27-leetcode_分组刷题_算法.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_算法.md
@@ -4,7 +4,7 @@ title:      leetcode-分组刷题-算法				# 标题
 subtitle:    #副标题
 date:       2022-02-27 				# 时间
 author:     FishRedLeaf 						# 作者
-header-img: iu_img/my_iu_8.png 	#这篇文章标题背景图片
+header-img: iu_img/my_iu_8.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - DSA与刷题/leetcode
