--- a/_posts/2022-03-19-leetcode_错题集.md
+++ b/_posts/2022-03-19-leetcode_错题集.md
@@ -4,7 +4,7 @@ title:      leetcode-错题集
 subtitle:   
 date:       2022-03-19
 author:     FishRedLeaf
-header-img: iu_img/my_iu_10.png
+header-img: iu_img/my_iu_10.jpg
 catalog: true
 tags:
     - DSA与刷题/leetcode
