--- a/_posts/2022-03-08-python语言特性.md
+++ b/_posts/2022-03-08-python语言特性.md
@@ -4,7 +4,7 @@ title:      python一些重要的语言特性
 subtitle:   
 date:       2022-03-08
 author:     FishRedLeaf
-header-img: iu_img/my_iu_9.png
+header-img: iu_img/my_iu_9.jpg
 catalog: true
 tags:
     - 编程语言/python
