--- a/_posts/2022-01-22-c语言中文网_基础教程.md
+++ b/_posts/2022-01-22-c语言中文网_基础教程.md
@@ -2,9 +2,9 @@
 layout:     post
 title:      C语言中文网-基础教程
 subtitle:   
-date:       2022-02-23
+date:       2022-01-22
 author:     FishRedLeaf
-header-img: iu_img/my_iu_4.png
+header-img: iu_img/my_iu_1.jpg
 catalog: true
 tags:
     - 编程语言/cpp
