--- a/_posts/2022-01-23-python语言特性.md
+++ b/_posts/2022-01-23-python语言特性.md
@@ -1,10 +1,10 @@
 ---
 layout:     post
-title:      python一些重要的语言特性
+title:      python语言特性
 subtitle:   
-date:       2022-03-08
+date:       2022-01-23
 author:     FishRedLeaf
-header-img: iu_img/my_iu_9.jpg
+header-img: iu_img/my_iu_3.png
 catalog: true
 tags:
     - 编程语言/python
