--- a/_posts/2022-02-24-leetcode_分组刷题_算法.md
+++ b/_posts/2022-02-24-leetcode_分组刷题_算法.md
@@ -2,9 +2,9 @@
 layout:     post   				    # 使用的布局（不需要改）
 title:      leetcode-分组刷题-算法				# 标题 
 subtitle:    #副标题
-date:       2022-02-27 				# 时间
+date:       2022-02-24 				# 时间
 author:     FishRedLeaf 						# 作者
-header-img: iu_img/my_iu_8.jpg 	#这篇文章标题背景图片
+header-img: iu_img/my_iu_10.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - DSA与刷题/leetcode
@@ -57,8 +57,15 @@ tags:								#标签
 **标签**
 `数组` `二分查找` `分治` 
 
-
 ##### solution
+
+-   转成求A和B数组中第k小的数，然后用k/2在A和B中分别找。
+-   比如k = 6, 分别看A和B中的第3个数, 已知 A1 < A2 < A3 < A4 < A5... 和 B1 < B2 < B3 < B4 < B5..., 
+    -   如果A3 <＝ B3, 那么第6小的数肯定不会是A1, A2, A3, 因为最多有两个数(B1和B2)小于A1, 三个数(B1和B2, A1)小于A2, 四个数(B1和B2, A1和A2)小于A3。
+    -   B3至少大于5个数, 所以第6小的数有可能是B1 (A1 < A2 < A3 < A4 < A5 < B1), 有可能是B2 (A1 < A2 < A3 < B1 < A4 < B2), 有可能是B3 (A1 < A2 < A3 < B1 < B2 < B3)。那就可以排除掉A1, A2, A3, 转成求A4, A5, ... B1, B2, B3, ...这些数中第3小的数的问题, k就被减半了。
+    -   每次都假设A的元素个数少, pa = min(k/2, lenA)的结果可能导致k == 1或A空, 这两种情况都是终止条件。 
+-   整理自http://chaoren.is-programmer.com/posts/42890.html，http://yucoding.blogspot.com/2013/01/leetcode-question-50-median-of-two.html
+
 ```python
 #
 # @lc app=leetcode.cn id=4 lang=python3
