--- a/_posts/2022-02-22-目录.md
+++ b/_posts/2022-02-22-目录.md
@@ -2,9 +2,9 @@
 layout:     post   			    # 使用的布局（不需要改）
 title:      目录 				  # 标题 
 subtitle:    #副标题
-date:       2022-01-24 		    # 时间
+date:       2022-02-22 		    # 时间
 author:     FishRedLeaf 		# 作者
-header-img: iu_img/my_iu_6.jpg 	#这篇文章标题背景图片
+header-img: iu_img/my_iu_4.png 	#这篇文章标题背景图片
 toc:        true
 catalog:    true 				# 是否归档
 tags:							#标签
