--- a/_posts/2022-02-24-leetcode_分组刷题_算法.md
+++ b/_posts/2022-02-24-leetcode_分组刷题_算法.md
@@ -15,6 +15,113 @@ tags:								#标签
 # 分组刷题-算法
 
 ## 1二分查找
+
+https://leetcode-cn.com/problems/search-insert-position/solution/te-bie-hao-yong-de-er-fen-cha-fa-fa-mo-ban-python-/
+
+#### 我的模板
+
+##### general
+
+```python
+def general(nums, target):
+    if not nums:
+        return -1
+    left, right = 0, len(nums) - 1
+    while left <= right:
+        mid = left + ((right - left) >> 1)
+        if nums[mid] == target:
+            return mid
+        elif nums[mid] < target:
+            left = mid + 1
+        else:
+            right = mid - 1
+    return -1
+```
+
+##### 查找第一个
+
+```python
+def left_bound(nums, target):
+    if not nums:
+        return -1
+    left, right = 0, len(nums) - 1
+    ans = -1
+    while left <= right:
+        mid = left + ((right - left) >> 1)
+        if nums[mid] == target:
+            right = mid - 1
+            ans = mid
+        elif nums[mid] < target:
+            left = mid + 1
+        else:
+            right = mid - 1
+    return ans
+```
+
+##### 查找最后一个
+
+```python
+def right_bound(nums, target):
+    if not nums:
+        return -1
+    left, right = 0, len(nums) - 1
+    ans = -1
+    while left <= right:
+        mid = left + ((right - left) >> 1)
+        if nums[mid] == target:
+            left = mid + 1
+            ans = mid
+        elif nums[mid] < target:
+            left = mid + 1
+        else:
+            right = mid - 1
+    return ans
+```
+
+
+
+#### B站大雪菜的模板
+
+https://www.bilibili.com/video/BV1Ft41157zW?spm_id_from=333.999.0.0
+
+力扣也有人整理了下https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/solution/tu-jie-er-fen-zui-qing-xi-yi-dong-de-jia-ddvc/
+
+##### 版本1
+
+当我们将区间`[l, r]`分成`[l, mid]`和`[mid+1, r]`时，其更新操作是`r = mid`或者`l = mid + 1`，计算mid时不需要加1，即`mid = (l + r)/2`。
+
+```python
+def binary_search(l, r):
+    while l < r:
+        mid = l + ((r - l) >> 1)
+        if check(mid):
+            r = mid
+        else:
+            l = mid + 1
+    return l
+```
+
+##### 版本2
+
+当我们将区间`[l, r]`分成`[l, mid-1]`和`[mid, r]`时，其更新操作是`r = mid - 1`或者`l = mid`，此时为了防止死循环，计算mid时需要加1，即`mid = (l + r + 1)/2`。
+
+```python
+def binary_search(l, r):
+    while l < r:
+        mid = l + ((1 + r - l) >> 1)
+        if check(mid):
+            l = mid
+        else:
+            r = mid - 1
+    return l
+```
+
+
+
+<img src="https://tva1.sinaimg.cn/large/e6c9d24ely1h0umzaj2umj20u00vfq5c.jpg" alt="image-20220401232634542" style="zoom: 50%;" />
+
+
+
 #### 4.寻找两个有序数组的中位数
 [https://leetcode-cn.com/problems/median-of-two-sorted-arrays](https://leetcode-cn.com/problems/median-of-two-sorted-arrays) 
 ##### 原题
@@ -67,31 +174,25 @@ tags:								#标签
 -   整理自http://chaoren.is-programmer.com/posts/42890.html，http://yucoding.blogspot.com/2013/01/leetcode-question-50-median-of-two.html
 
 ```python
-#
-# @lc app=leetcode.cn id=4 lang=python3
-#
-# [4] 寻找两个有序数组的中位数
-# http://chaoren.is-programmer.com/posts/42890.html
-#
 class Solution:
     def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
+        def findMinK(nums1, nums2, k):
+            if len(nums1) > len(nums2):
+                return findMinK(nums2, nums1, k)
+            l1, l2 = len(nums1), len(nums2)
+            if l1 == 0:
+                return nums2[k-1]
+            if k == 1:
+                return min(nums1[0], nums2[0])
+            pa = min(k // 2, l1)
+            pb = k - pa
+            return findMinK(nums1[pa:], nums2, k-pa) if nums1[pa-1] <= nums2[pb-1] else findMinK(nums1, nums2[pb:], k-pb)
+        
         l1, l2 = len(nums1), len(nums2)
         if (l1 + l2) % 2 == 1:
-            return 1.0  * self.getMedian(nums1, nums2, (l1 + l2) // 2 + 1)
+            return findMinK(nums1, nums2, (l1 + l2) // 2 + 1)
         else:
-            return 0.5 * (self.getMedian(nums1, nums2, (l1+l2)//2) + self.getMedian(nums1, nums2, (l1+l2)//2+1))
-    def getMedian(self, A, B, k):
-        # return kth smallest number of arrays A and B, assume len(A) <= len(B)
-        la, lb = len(A), len(B)
-        if la > lb:
-            return self.getMedian(B, A, k)
-        if la == 0:
-            return B[k-1]
-        if k == 1:
-            return min(A[0], B[0])
-        pa = min(k//2, la)
-        pb = k - pa
-        return self.getMedian(A[pa:], B, k-pa) if A[pa-1] <= B[pb-1] else self.getMedian(A, B[pb:], k-pb)
+            return 0.5 * (findMinK(nums1, nums2, (l1 + l2) // 2 + 1) + findMinK(nums1, nums2, (l1 + l2) // 2))
 ```
 >
 #### 33.搜索旋转排序数组
@@ -144,40 +245,33 @@ class Solution:
 **标签**
 `数组` `二分查找` 
 
-
 ##### solution
+
+-   数组从中间分开成左右两部分的时候，一定有一部分的数组是有序的
+-   以左边有序为例，右边有序同理
+    -   如果target在左边，因为左边是有序的，因此可以通过判断target是否落在nums[l]和nums[mid]直接快速确定，那么可以确定新的右边界；
+    -   否则target落在无序的右边，可以更新左边界
+
 ```python
-#
-# @lc app=leetcode.cn id=33 lang=python3
-#
-# [33] 搜索旋转排序数组
-#
 class Solution:
-    def search(self, nums, target):
-        if not nums:
-            return -1
-        l, r = 0, len(nums)-1
+    def search(self, nums: List[int], target: int) -> int:
+        n = len(nums)
+        l, r = 0, n - 1
         while l <= r:
-            mid = l + ((r - l ) >> 1)
-            # print(mid)
+            mid = l + ((r - l) >> 1)
             if nums[mid] == target:
                 return mid
-            # 左边是有序的, 注意数组长度为2时，mid=l,
-            # l和mid重合时，跟nums[l] < nums[mid]归为一类
-            # 因为nums[mid]!=target,所以nums[l]!=target,
-            # 所以l_new = mid + 1
-            if nums[l] <= nums[mid]:
+            elif nums[l] <= nums[mid]:
                 if nums[l] <= target < nums[mid]:
                     r = mid - 1
                 else:
                     l = mid + 1
-            else:
+            else:  # target <= nums[r]
                 if nums[mid] < target <= nums[r]:
                     l = mid + 1
                 else:
                     r = mid - 1
         return -1
-# print(Solution().search([5,1,2,3,4], 1))
 ```
 >
 #### 34.在排序数组中查找元素的第一个和最后一个位置
@@ -223,16 +317,114 @@ class Solution:
 **标签**
 `数组` `二分查找` 
 
+##### solution1 寻找第一个大于target-1的数和第一个大于target的数
 
-##### solution
+-   `find_bigger_than_k(nums, k)`用于找到第一个比k大的数
+-   由于可能找不到比k大的数，所以ans默认值设置为nums长度，这样`right_idx = len(nums) - 1`，如果发现最后一个数等于target的话，那么说明right_idx就表示最后一个等于target的数的索引
+
 ```python
-#
-# @lc app=leetcode.cn id=34 lang=python3
-#
-# [34] 在排序数组中查找元素的第一个和最后一个位置
-#
 class Solution:
     def searchRange(self, nums: List[int], target: int) -> List[int]:
+        def find_bigger_than_k(nums, k):
+            l, r = 0, len(nums) - 1
+            ans = len(nums)
+            while l <= r:
+                mid = l + ((r - l) >> 1)
+                if nums[mid] > k:
+                    r = mid - 1
+                    ans = mid
+                else:
+                    l = mid + 1
+            return ans
+        
+        left_idx = find_bigger_than_k(nums, target - 1)
+        right_idx = find_bigger_than_k(nums, target) - 1
+        if left_idx <= right_idx and right_idx < len(nums) and nums[left_idx] == target and nums[right_idx] == target:
+            return [left_idx, right_idx]
+        return [-1, -1]
+```
+
+##### solution2 相等时也收缩
+
+-   查找第一个数：找到target时，继续收缩右边界
+-   查找最后一个数：找到target时，继续收缩左边界
+
+```python
+class Solution:
+    def searchRange(self, nums: List[int], target: int) -> List[int]:
+        def left_bound(nums, target):
+            if not nums:
+                return -1
+            left, right = 0, len(nums) - 1
+            ans = -1
+            while left <= right:
+                mid = left + ((right - left) >> 1)
+                if nums[mid] == target:
+                    right = mid - 1
+                    ans = mid
+                elif nums[mid] < target:
+                    left = mid + 1
+                else:
+                    right = mid - 1
+            return ans
+        
+        def right_bound(nums, target):
+            if not nums:
+                return -1
+            left, right = 0, len(nums) - 1
+            ans = -1
+            while left <= right:
+                mid = left + ((right - left) >> 1)
+                if nums[mid] == target:
+                    left = mid + 1
+                    ans = mid
+                elif nums[mid] < target:
+                    left = mid + 1
+                else:
+                    right = mid - 1
+            return ans
+        
+        l, r = left_bound(nums, target), right_bound(nums, target)
+        return [l, r]
+```
+
+
+
+##### solution3 判断是否已经是第一个或者最后一个
+
+-   solution2和3本质上是同样的思路
+
+-   `nums[mid] == target`时如果确定搜索区间都搜完了，或者`nums[mid] != nums[mid-1]`，那么可以返回mid
+
+```python
+class Solution:
+    def searchRange(self, nums: List[int], target: int) -> List[int]:
+        res = []
+        n = len(nums)
+        l, r = 0, n - 1
+        while l <= r:
+            mid = l + ((r - l) >> 1)
+            if nums[mid] == target and (mid == 0 or nums[mid] != nums[mid-1]):
+                res.append(mid)
+                break
+            elif nums[mid] < target:
+                l = mid + 1
+            else:
+                r = mid - 1
+        if not res:
+            return [-1, -1]
+        
+        l, r = res[0], n - 1
+        while l <= r:
+            mid = l + ((r - l) >> 1)
+            if nums[mid] == target and (mid == n - 1 or nums[mid] != nums[mid+1]):
+                res.append(mid)
+                break
+            elif nums[mid] > target:
+                r = mid - 1
+            else:
+                l = mid + 1
+        return res
 ```
 >
 #### 69.x-的平方根
@@ -274,29 +466,27 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=69 lang=python3
-#
-# [69] x 的平方根
-#
 class Solution:
     def mySqrt(self, x: int) -> int:
-        if x == 1:
-            return 1
         if x == 0:
             return 0
-        l, r = 0, x-1
+        l, r = 1, x
         while l <= r:
-            # print(l, r)
-            mid = l + ((r-l) >> 2)
-            if mid * mid - x == 0:
+            mid = l + ((r - l) >> 1)
+            mid_square = mid * mid
+            if mid_square == x:
                 return mid
-            elif mid * mid - x > 0:
-                r = mid - 1
+            elif mid_square < x:
+                if (mid + 1) * (mid + 1) > x:
+                    return mid
+                else:
+                    l = mid + 1
             else:
-                l = mid + 1
-        return r
-# print(Solution().mySqrt(8))
+                if (mid - 1) * (mid - 1) < x:
+                    return mid - 1
+                else:
+                    r = mid - 1
+        return l
 ```
 >
 #### 81.搜索旋转排序数组-ii
@@ -345,31 +535,29 @@ class Solution:
 **标签**
 `数组` `二分查找` 
 
-
 ##### solution
+
+-   对于数组中有重复元素的情况，二分查找时可能会有 `nums[l] = nums[mid] = nums[r]`，此时无法判断区间`[l, mid]`和区间`[mid+1, r]`哪个是有序的。
+-   例如`nums = [3,1,2,3,3,3,3], target = 2`，首次二分时无法判断区间`[0, 3]`和区间`[4, 6]`哪个是有序的。对于这种情况，我们只能将当前二分区间的左边界加一，右边界减一，然后在新区间上继续二分查找。
+
 ```python
-#
-# @lc app=leetcode.cn id=81 lang=python3
-#
-# [81] 搜索旋转排序数组 II
-#https://leetcode-cn.com/problems/search-in-rotated-sorted-array-ii/solution/er-fen-by-powcai/
-#
 class Solution:
     def search(self, nums: List[int], target: int) -> bool:
-        l, r = 0, len(nums)-1
+        n = len(nums)
+        l, r = 0, n - 1
         while l <= r:
             mid = l + ((r - l) >> 1)
             if nums[mid] == target:
                 return True
-            if nums[mid] == nums[l] == nums[r]:
-                r -= 1
+            if nums[l] == nums[mid] == nums[r]:
                 l += 1
+                r -= 1
             elif nums[l] <= nums[mid]:
                 if nums[l] <= target < nums[mid]:
                     r = mid - 1
                 else:
                     l = mid + 1
-            else:
+            else:  # target <= nums[r]
                 if nums[mid] < target <= nums[r]:
                     l = mid + 1
                 else:
@@ -429,30 +617,24 @@ class Solution:
 **标签**
 `数组` `二分查找` 
 
-
 ##### solution
+
+-   对于`[l, r - 1]`区间的数，要么大于`nums[r]`，要么小于`nums[r]`
+    -   如果`nums[mid] > nums[r]`，说明`[l, mid]`是升序的，最小值在`[mid + 1, r]`
+    -   如果`nums[mid] < nums[r]`，说明`[mid, r]`是升序的，最小值在`[l, mid]`
+    -   因为`nums`中数互不相同，因此只有上述两种情况
+
 ```python
-#
-# @lc app=leetcode.cn id=153 lang=python3
-#
-# [153] 寻找旋转排序数组中的最小值
-#
-# 93.7
 class Solution:
     def findMin(self, nums: List[int]) -> int:
-        if len(nums) == 1:
-            return nums[0]
-        l, r = 0, len(nums)-1
-        while l <= r:
+        l, r = 0, len(nums) - 1
+        while l < r:
             mid = l + ((r - l) >> 1)
-            if nums[mid] > nums[mid+1]:
-                return nums[mid+1]
-            if nums[mid-1] > nums[mid]:
-                return nums[mid]
             if nums[mid] > nums[r]:
                 l = mid + 1
             else:
                 r = mid
+        return nums[l]
 ```
 >
 #### 154.寻找旋转排序数组中的最小值-ii
@@ -500,22 +682,22 @@ class Solution:
 **标签**
 `数组` `二分查找` 
 
-
 ##### solution
+
+对于`[l, r - 1]`区间的数，要么大于`nums[r]`，要么小于`nums[r]`，要么等于`nums[r]`
+
+-   如果`nums[mid] > nums[r]`，说明`[l, mid]`是升序的，最小值在`[mid + 1, r]`
+-   如果`nums[mid] < nums[r]`，说明`[mid, r]`是升序的，最小值在`[l, mid]`
+-   如果`nums[mid] = nums[r]`，最小值可能在`[l, mid]`或者`[mid, r]`，无论`nums[r]`是不是最小值，都有一个它的替代品`nums[mid]`，因此可以忽略右端点
+
+<img src="https://tva1.sinaimg.cn/large/e6c9d24ely1h0upn0zr5qj21jk0pdwg0.jpg" alt="fig4" style="zoom:48%;" />
+
 ```python
-#
-# @lc app=leetcode.cn id=154 lang=python3
-#
-# [154] 寻找旋转排序数组中的最小值 II
-# https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array-ii/solution/154-find-minimum-in-rotated-sorted-array-ii-by-jyd/
-#
 class Solution:
     def findMin(self, nums: List[int]) -> int:
-        if len(nums) == 1:
-            return nums[0]
-        l, r = 0, len(nums)-1
-        while l <= r:
-            mid = l + ((r - l ) >> 1)
+        l, r = 0, len(nums) - 1
+        while l < r:
+            mid = l + ((r - l) >> 1)
             if nums[mid] > nums[r]:
                 l = mid + 1
             elif nums[mid] < nums[r]:
@@ -566,25 +748,34 @@ class Solution:
 **标签**
 `数组` `二分查找` 
 
-
 ##### solution
+
+-   mid和左边的mid-1，右边的mid+1，组成的趋势有四种情况
+    -   上升：`nums[mid - 1] < nums[mid] < nums[mid + 1]`，搜索区间更新为`[mid + 1, r]`
+    -   下降：`nums[mid - 1] > nums[mid] > nums[mid + 1]`，搜索区间更新为`[l, mid - 1]`
+    -   峰：`nums[mid - 1] < nums[mid] > nums[mid + 1]`，找到一个可行解
+    -   谷：`nums[mid - 1] > nums[mid] < nums[mid + 1]`，搜索区间可以更新为`[mid + 1, r]`，也可以更新为`[l, mid - 1]`
+    -   想找峰值就往相对于当前mid位置高的地方移动
+
 ```python
-#
-# @lc app=leetcode.cn id=162 lang=python3
-#
-# [162] 寻找峰值
-#
 class Solution:
     def findPeakElement(self, nums: List[int]) -> int:
-        l, r = 0, len(nums)-1
+        def get_val(i):
+            if i == -1 or i == n:
+                return float('-inf')
+            return nums[i]
+        
+        n = len(nums)
+        l, r = 0, n - 1
         while l <= r:
-            if l == r:
-                return l
             mid = l + ((r - l) >> 1)
-            if nums[mid] < nums[mid+1]:
+            if get_val(mid - 1) < nums[mid] > get_val(mid + 1):
+                return mid
+            elif nums[mid] < get_val(mid + 1):
                 l = mid + 1
             else:
-                r = mid
+                r = mid - 1
+        return -1
 ```
 >
 ## 2排序
