--- a/_posts/2022-03-01-leetcode_模板.md
+++ b/_posts/2022-03-01-leetcode_模板.md
@@ -169,6 +169,66 @@ def union(i, j):
 
 https://leetcode-cn.com/problems/search-insert-position/solution/te-bie-hao-yong-de-er-fen-cha-fa-fa-mo-ban-python-/
 
+##### general
+
+```python
+def general(nums, target):
+    if not nums:
+        return -1
+    left, right = 0, len(nums) - 1
+    while left <= right:
+        mid = left + ((right - left) >> 1)
+        if nums[mid] == target:
+            return mid
+        elif nums[mid] < target:
+            left = mid + 1
+        else:
+            right = mid - 1
+    return -1
+```
+
+##### 查找第一个
+
+```python
+def left_bound(nums, target):
+    if not nums:
+        return -1
+    left, right = 0, len(nums) - 1
+    ans = -1
+    while left <= right:
+        mid = left + ((right - left) >> 1)
+        if nums[mid] == target:
+            right = mid - 1
+            ans = mid
+        elif nums[mid] < target:
+            left = mid + 1
+        else:
+            right = mid - 1
+    return ans
+```
+
+##### 查找最后一个
+
+```python
+def right_bound(nums, target):
+    if not nums:
+        return -1
+    left, right = 0, len(nums) - 1
+    ans = -1
+    while left <= right:
+        mid = left + ((right - left) >> 1)
+        if nums[mid] == target:
+            left = mid + 1
+            ans = mid
+        elif nums[mid] < target:
+            left = mid + 1
+        else:
+            right = mid - 1
+    return ans
+```
+
+
+
 ## 滑动窗口
 
 
